# zime

./: .gitignore  .release-plz.toml  Cargo.toml  Justfile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/zime/: CHANGELOG.md  Cargo.toml
crates/zime/src/: main.rs  remotes.rs
crates/zime/src/remotes/: arxiv.rs  dblp.rs  scihub.rs
