[package]
name = "zime"
version = "0.1.1"
edition = "2024"
repository.workspace = true

[dependencies]
biblatex = "0.10.0"
bstr = "1.11.3"
camino = "1.1.9"
clap = { version = "4.5.32", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", default-features = false, features = [
    "tracing",
] }
cliclack = "0.3.5"
color-eyre = "0.6.3"
directories = "6.0.0"
duct = "0.13.7"
inquire = "0.7.5"
itertools = "0.14.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
